--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -6,15 +6,18 @@ on:
 
 jobs:
   build:
+    permissions:
+        contents: read
+        packages: write
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
 
       - name: Login to GitHub Container Registry
-        uses: docker/login-action@v3
+        uses: docker/login-action@v3.0.0
         with:
           registry: ghcr.io
-          username: ${{ github.repository_owner }}
+          username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push
