--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -25,4 +25,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: "nhedger/bms-web:latest"
+          tags: "ghcr.io/nhedger/bms-test:latest"
