--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -24,5 +24,6 @@ jobs:
         uses: docker/build-push-action@v5.0.0
         with:
           context: .
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: "ghcr.io/nhedger/bms-test:latest"
